# budtmo--docker-android

./: acceptance.md  goal.md  log_parser.py  progress.md  pyproject.toml  run_test.sh  todo.md
cli/src/docker_android.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/android_runner/: __init__.py  cli.py  device.py  emulator.py  env_vars.py  genymotion_aws.py  genymotion_saas.py  process.py  status.py  utils.py
tests/: test_cli.py  test_emulator.py  test_genymotion_aws.py  test_genymotion_saas.py  test_process.py  test_utils.py
